--- a/TuneHub/src/app/Components/Shared/sidebar/sidebar.component.html
+++ b/TuneHub/src/app/Components/Shared/sidebar/sidebar.component.html
@@ -30,7 +30,7 @@
       <mat-icon matListItemIcon>emoji_events</mat-icon>
       <span matListItemTitle>Challenges</span>
     </a>
-    <a mat-list-item routerLink="/sheet-music" routerLinkActive="active" (click)="sidebarService.close()">
+    <a mat-list-item routerLink="/sheets-music" routerLinkActive="active" (click)="sidebarService.close()">
       <mat-icon matListItemIcon>music_note</mat-icon>
       <span matListItemTitle>Sheet Music</span>
     </a>
