--- a/TuneHub/src/app/app.component.html
+++ b/TuneHub/src/app/app.component.html
@@ -21,5 +21,5 @@
     
   </mat-sidenav-content>
 </mat-sidenav-container>
-
+<app-upload-sheet-music></app-upload-sheet-music>
 <app-login-window></app-login-window>
