--- a/TuneHub/src/app/Components/Post/posts/posts.component.css
+++ b/TuneHub/src/app/Components/Post/posts/posts.component.css
@@ -116,3 +116,19 @@
 .view-details-button:hover {
     background-color: #0056b3;
 }
+
+
+
+
+
+
+
+
+
+.cover-image {
+    /* z-index: -1; */
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; /* מבטיח שמרכז התמונה ייראה */
+    display: block; 
+}
