--- a/TuneHub/src/app/Components/Users/musicians/musicians.component.html
+++ b/TuneHub/src/app/Components/Users/musicians/musicians.component.html
@@ -18,14 +18,21 @@
     <img src="./assets/images/musicians.png" class="cover-image" />
 
     <div class="overlay-content">
-        <div class="title-section">
-            <h1 class="musicians" style="font-size: 60px;">Find Musicians</h1>
-            <p style="font-size: 25px;color: #ffffff;">Connect with talented professionals for your next project</p>
+        <div class="header-inner-content"> 
+            
+            <div class="title-section">
+                <h1 class="musicians" style="font-size: 60px;">Find Musicians</h1>
+                <p style="font-size: 25px;color: #ffffff;">Connect with talented professionals for your next project</p>
+            </div>
+            
+            <button class="button">
+                <!-- <span class="icon"></span> -->
+                Join Network
+                <mat-icon>person</mat-icon>
+                
+            </button>
+            
         </div>
-        <button class="join-network-btn">
-            <span class="icon">🧑‍🤝‍🧑</span>
-            Join Network
-        </button>
     </div>
 </div>
 
