--- a/TuneHub/src/app/Components/Users/musicians/musicians.component.html
+++ b/TuneHub/src/app/Components/Users/musicians/musicians.component.html
@@ -15,26 +15,27 @@
     <br> -->
     <header class="header">
         <div class="cover-wrapper">
-    <img src="./assets/images/musicians.png" class="cover-image" />
+            <img src="./assets/images/musicians.png" class="cover-image" />
 
-    <div class="overlay-content">
-        <div class="header-inner-content"> 
-            
-            <div class="title-section">
-                <h1 class="musicians" style="font-size: 60px;">Find Musicians</h1>
-                <p style="font-size: 25px;color: #ffffff;">Connect with talented professionals for your next project</p>
+            <div class="overlay-content">
+                <div class="header-inner-content">
+
+                    <div class="title-section">
+                        <h1 class="musicians" style="font-size: 60px;">Find Musicians</h1>
+                        <p style="font-size: 25px;color: #ffffff;">Connect with talented professionals for your next
+                            project</p>
+                    </div>
+
+                    <button class="button">
+                        <!-- <span class="icon"></span> -->
+                        Join Network
+                        <mat-icon>person</mat-icon>
+
+                    </button>
+
+                </div>
             </div>
-            
-            <button class="button">
-                <!-- <span class="icon"></span> -->
-                Join Network
-                <mat-icon>person</mat-icon>
-                
-            </button>
-            
         </div>
-    </div>
-</div>
 
 
     </header>
